Fix project image display so they don't stretch

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@
 .card img {
   width: 100%;
   height: 20vw;
-  object-fit: fill;
+  object-fit: scale-down;
 }
 
 hr {
